--- a/css/portfolio.html
+++ b/css/portfolio.html
@@ -28,7 +28,58 @@
     </header>
 
 
-    
+    <!--Портфолио-->
+
+    <main>
+    <section>
+        <ul>
+            <li> <button type="button">Все</button></li>
+            <li> <button type="button">Веб-сайты</button></li>
+            <li> <button type="button">Приложения</button></li>
+            <li> <button type="button">Дизайн</button></li>
+            <li> <button type="button">Маркетинг</button></li>
+        </ul>
+        
+        <ul>
+            <li><img src="./images/tehnokrak.jpg" alt="веб-сайт" width="370">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li><img src="" alt="баскетбольный постер" width="370">
+                <h3>Постер New Orlean vs Golden Star</h3>
+                <p>Дизайн</p>
+            </li>
+            <li><img src="" alt="ресторан морепродуктов" width="370">
+                <h3>Ресторан Seafood</h3>
+                <p>Приложение</p>
+            </li>
+            <li><img src="" alt="наушники" width="370">
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li><img src="" alt="коробки" width="370">
+             <h3>Проект Boxes</h3>
+              <p>Приложение</p>
+            </li>
+            <li><img src="" alt="вдохновение без границ" width="370">
+                <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+            </li>
+            <li><img src="" alt="издание ограничено" width="370">
+             <h3>Издание Limited Edition</h3>
+             <p>Дизайн</p>
+            </li>
+            <li><img src="" alt="бирка лаб" width="370">
+            <h3>Проект LAB</h3>
+             <p>Маркетинг</p>
+            </li>
+            <li><img src="" alt="растущий бизнес" width="370">
+             <h3>Growing Business</h3>
+             <p>Приложение</p>
+            </li>
+        </ul>    
+    </section>
+    </main>
 
     <!--Футер-->
     <footer>
