--- a/portfolio.html
+++ b/portfolio.html
@@ -45,35 +45,35 @@
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
             </li>
-            <li><img src="" alt="баскетбольный постер" width="370">
+            <li><img src="./images/baskrtball.jpg" alt="баскетбольный постер" width="370">
                 <h3>Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
             </li>
-            <li><img src="" alt="ресторан морепродуктов" width="370">
+            <li><img src="./images/seafood.jpg" alt="ресторан морепродуктов" width="370">
                 <h3>Ресторан Seafood</h3>
                 <p>Приложение</p>
             </li>
-            <li><img src="" alt="наушники" width="370">
+            <li><img src="./images/prime.jpg" alt="наушники" width="370">
                 <h3>Проект Prime</h3>
                 <p>Маркетинг</p>
             </li>
-            <li><img src="" alt="коробки" width="370">
+            <li><img src="./images/boxes.jpg" alt="коробки" width="370">
              <h3>Проект Boxes</h3>
               <p>Приложение</p>
             </li>
-            <li><img src="" alt="вдохновение без границ" width="370">
+            <li><img src="./images/noborders.jpg" alt="вдохновение без границ" width="370">
                 <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
             </li>
-            <li><img src="" alt="издание ограничено" width="370">
+            <li><img src="./images/limited.jpg" alt="издание ограничено" width="370">
              <h3>Издание Limited Edition</h3>
              <p>Дизайн</p>
             </li>
-            <li><img src="" alt="бирка лаб" width="370">
+            <li><img src="./images/lab.jpg" alt="бирка лаб" width="370">
             <h3>Проект LAB</h3>
              <p>Маркетинг</p>
             </li>
-            <li><img src="" alt="растущий бизнес" width="370">
+            <li><img src="./images/growingbis.jpg" alt="растущий бизнес" width="370">
              <h3>Growing Business</h3>
              <p>Приложение</p>
             </li>
