--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
     <!--Шапка-->
 
-    <header>
+    <header class="page-header">
         <a href="">WebStudio</a>
-<nav>
-    <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="./portfolio.html">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+<nav >
+    <ul class="site-nav">
+        <li><a  href="" class="link">Студия</a></li>
+        <li><a  href="./portfolio.html" class="link">Портфолио</a></li>
+        <li><a  href="" class="link">Контакты</a></li>
     </ul>
 </nav>
-<ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+<ul class="auth-nav">
+    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 </ul>
 </header>
 
@@ -33,32 +33,32 @@
 
 <!--Герой-->
 
-<section>
+<section class="hero-section">
 
-    <h1>Эффективные решения для вашего бизнеса</h1>
-    <button type="button">Заказать услугу</button>
+    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+    <button type="button" class="hero-button">Заказать услугу</button>
 
 </section>
 
 <!--Преимущества-->
 
-<section>
-<ul>
+<section class="benefits-section">
+<ul class="benefit-list">
 <li>
-    <h2>Внимание к деталям</h2>
-    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <h2 class="title">Внимание к деталям</h2>
+    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 </li>
 <li>
-    <h2>Пунктуальность</h2>
-    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    <h2 class="title">Пунктуальность</h2>
+    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 </li>
 <li>
-    <h2>Планирование</h2>
-    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    <h2 class="title">Планирование</h2>
+    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 </li>
 <li>
-    <h2>Современные технологии</h2>
-    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    <h2 class="title">Современные технологии</h2>
+    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 </li>
 </ul>
 </section>
@@ -76,26 +76,26 @@
 
      <!--Наша команда-->
 
- <section>
+ <section class="team-section">
      <h2>Наша команда</h2>
      <ul>
-        <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3>Игорь Демьяненко</h3><p lang="en">Product Designer</p></li>
-        <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3>Ольга Репина</h3><p lang="en">Frontend Developer</p></li>
-        <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3>Николай Тарасов</h3><p lang="en">Marketing</p></li>
-        <li><img src="./images/team4.jpg" alt="фото человека" width="270"><h3>Михаил Ермаков</h3><p lang="en">UI Designer</p></li>
+        <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3>Игорь Демьяненко</h3><p class="position" lang="en">Product Designer</p></li>
+        <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3>Ольга Репина</h3><p class="position" lang="en">Frontend Developer</p></li>
+        <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3>Николай Тарасов</h3><p class="position" lang="en">Marketing</p></li>
+        <li><img src="./images/team4.jpg" alt="фото человека" width="270"><h3>Михаил Ермаков</h3><p class="position" lang="en">UI Designer</p></li>
      </ul>
      
  </section>
 </main>
 
 <!--Футер-->
-<footer>    
+<footer class="footer-section">    
         <a href="">WebStudio</a>
 <address>
         
-    <a href="">г. Киев, пр-т Леси Украинки, 26</a>
-    <a href="mailto:info@example.com">info@example.com</a>
-    <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <a href="" class="adress">г. Киев, пр-т Леси Украинки, 26</a>
+    <a href="mailto:info@example.com" class="mail">info@example.com</a>
+    <a href="tel:+380991111111" class="telephone">+38 099 111 11 11</a>
 
 </address>
 </footer>
