--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -15,7 +17,7 @@
     <!--Шапка-->
 
     <header class="page-header">
-        <a href="">WebStudio</a>
+        <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
 <nav >
     <ul class="site-nav">
         <li><a  href="" class="link">Студия</a></li>
@@ -65,8 +67,8 @@
 
  <!--Чем мы занимаемся-->
 
- <section>
-    <h2>Чем мы занимаемся</h2>
+ <section class="work-section">
+    <h2 class="title">Чем мы занимаемся</h2>
      <ul>
         <li><img src="./images/table.jpg" alt="рабочее место" width="370"></li>
         <li><img src="./images/phone.jpg" alt="изображение телефона" width="370"></li>
@@ -77,12 +79,12 @@
      <!--Наша команда-->
 
  <section class="team-section">
-     <h2>Наша команда</h2>
+     <h2 class="title">Наша команда</h2>
      <ul>
-        <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3>Игорь Демьяненко</h3><p class="position" lang="en">Product Designer</p></li>
-        <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3>Ольга Репина</h3><p class="position" lang="en">Frontend Developer</p></li>
-        <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3>Николай Тарасов</h3><p class="position" lang="en">Marketing</p></li>
-        <li><img src="./images/team4.jpg" alt="фото человека" width="270"><h3>Михаил Ермаков</h3><p class="position" lang="en">UI Designer</p></li>
+        <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3 class="name">Игорь Демьяненко</h3><p class="position" lang="en">Product Designer</p></li>
+        <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3 class="name">Ольга Репина</h3><p class="position" lang="en">Frontend Developer</p></li>
+        <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3 class="name">Николай Тарасов</h3><p class="position" lang="en">Marketing</p></li>
+        <li><img src="./images/team4.jpg" alt="фото человека" width="270"><h3 class="name">Михаил Ермаков</h3><p class="position" lang="en">UI Designer</p></li>
      </ul>
      
  </section>
@@ -90,7 +92,7 @@
 
 <!--Футер-->
 <footer class="footer-section">    
-        <a href="">WebStudio</a>
+        <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
 <address>
         
     <a href="" class="adress">г. Киев, пр-т Леси Украинки, 26</a>
