--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
         <nav>
             <ul class="site-nav">
-                <li><a href="" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
