--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <!--Шапка-->
 
     <header class="page-header">
-        <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
+        <a href="./index.html" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
 <nav >
-    <ul class="site-nav">
-        <li><a  href="" class="link">Студия</a></li>
+    <ul class="site-nav list">
+        <li><a  href="" class="link current">Студия</a></li>
         <li><a  href="./portfolio.html" class="link">Портфолио</a></li>
         <li><a  href="" class="link">Контакты</a></li>
     </ul>
 </nav>
-<ul class="auth-nav">
+<ul class="auth-nav list">
     <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
     <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 </ul>
@@ -45,7 +45,7 @@
 <!--Преимущества-->
 
 <section class="benefits-section">
-<ul class="benefit-list">
+<ul class="benefit-list list">
 <li>
     <h2 class="title">Внимание к деталям</h2>
     <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -69,7 +69,7 @@
 
  <section class="work-section">
     <h2 class="title">Чем мы занимаемся</h2>
-     <ul>
+     <ul class="list">
         <li><img src="./images/table.jpg" alt="рабочее место" width="370"></li>
         <li><img src="./images/phone.jpg" alt="изображение телефона" width="370"></li>
         <li><img src="./images/tablet.jpg" alt="изображение планшета" width="370"></li>
@@ -80,7 +80,7 @@
 
  <section class="team-section">
      <h2 class="title">Наша команда</h2>
-     <ul>
+     <ul class="list">
         <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3 class="name">Игорь Демьяненко</h3><p class="position" lang="en">Product Designer</p></li>
         <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3 class="name">Ольга Репина</h3><p class="position" lang="en">Frontend Developer</p></li>
         <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3 class="name">Николай Тарасов</h3><p class="position" lang="en">Marketing</p></li>
@@ -94,11 +94,11 @@
 <footer class="footer-section">    
         <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
 <address>
-        
-    <a href="" class="adress">г. Киев, пр-т Леси Украинки, 26</a>
-    <a href="mailto:info@example.com" class="mail">info@example.com</a>
-    <a href="tel:+380991111111" class="telephone">+38 099 111 11 11</a>
-
+<ul class="list">
+    <li><a href="" class="adress">г. Киев, пр-т Леси Украинки, 26</a></li>
+    <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
+    <li><a href="tel:+380991111111" class="telephone">+38 099 111 11 11</a></li>
+</ul>
 </address>
 </footer>
     
