--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <!--Шапка-->
 
     <header class="page-header">
-        <a href="./index.html" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
+        <a href="./index.html" class="logo list"><span class="web">Web</span><span class="studio">Studio</span></a>
 <nav >
     <ul class="site-nav list">
-        <li><a  href="" class="link current">Студия</a></li>
-        <li><a  href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a  href="" class="link">Контакты</a></li>
+        <li><a  href="" class="site-nav-link list current">Студия</a></li>
+        <li><a  href="./portfolio.html" class="site-nav-link list">Портфолио</a></li>
+        <li><a  href="" class="site-nav-link list">Контакты</a></li>
     </ul>
 </nav>
 <ul class="auth-nav list">
-    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+    <li><a href="mailto:info@devstudio.com" class="auth-nav-link list">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111" class="auth-nav-link list">+38 096 111 11 11</a></li>
 </ul>
 </header>
 
@@ -45,22 +45,24 @@
 <!--Преимущества-->
 
 <section class="benefits-section">
+   
+    <h2></h2>
 <ul class="benefit-list list">
 <li>
-    <h2 class="title">Внимание к деталям</h2>
-    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <h3 class="benefit-title">Внимание к деталям</h3>
+    <p class="benefit-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 </li>
 <li>
-    <h2 class="title">Пунктуальность</h2>
-    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    <h3 class="benefit-title">Пунктуальность</h3>
+    <p class="benefit-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 </li>
 <li>
-    <h2 class="title">Планирование</h2>
-    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    <h3 class="benefit-title">Планирование</h3>
+    <p class="benefit-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 </li>
 <li>
-    <h2 class="title">Современные технологии</h2>
-    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    <h3 class="benefit-title">Современные технологии</h3>
+    <p class="benefit-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 </li>
 </ul>
 </section>
@@ -68,8 +70,8 @@
  <!--Чем мы занимаемся-->
 
  <section class="work-section">
-    <h2 class="title">Чем мы занимаемся</h2>
-     <ul class="list">
+    <h2 class="work-title">Чем мы занимаемся</h2>
+     <ul class="work-list list">
         <li><img src="./images/table.jpg" alt="рабочее место" width="370"></li>
         <li><img src="./images/phone.jpg" alt="изображение телефона" width="370"></li>
         <li><img src="./images/tablet.jpg" alt="изображение планшета" width="370"></li>
@@ -79,8 +81,8 @@
      <!--Наша команда-->
 
  <section class="team-section">
-     <h2 class="title">Наша команда</h2>
-     <ul class="list">
+     <h2 class="team-title">Наша команда</h2>
+     <ul class="team-list list">
         <li><img src="./images/team1.jpg" alt="фото человека" width="270"><h3 class="name">Игорь Демьяненко</h3><p class="position" lang="en">Product Designer</p></li>
         <li><img src="./images/team2.jpg" alt="фото человека" width="270"><h3 class="name">Ольга Репина</h3><p class="position" lang="en">Frontend Developer</p></li>
         <li><img src="./images/team3.jpg" alt="фото человека" width="270"><h3 class="name">Николай Тарасов</h3><p class="position" lang="en">Marketing</p></li>
@@ -92,10 +94,10 @@
 
 <!--Футер-->
 <footer class="footer-section">    
-        <a href="" class="logo"><span class="accent">Web</span><span class="studio">Studio</span></a>
-<address>
-<ul class="list">
-    <li><a href="" class="adress">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <a href="" class="logo list"><span class="web">Web</span><span class="studio">Studio</span></a>
+<address class="address-section">
+<ul class=" address-list list">
+    <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
     <li><a href="mailto:info@example.com" class="mail">info@example.com</a></li>
     <li><a href="tel:+380991111111" class="telephone">+38 099 111 11 11</a></li>
 </ul>
